--- a/style.css
+++ b/style.css
@@ -169,7 +169,7 @@ footer{
     border-radius: 5px;
     box-sizing: border-box;
 }
-.addAjouterbutton{
+.addAjouterButton{
     background-color: gray;
     border: 1px solid rgb(32, 31, 31);
     color:white;
